fix popup close button on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -329,8 +329,10 @@ img {
   gap: 10px;
   margin: 0;
   padding: 0 20px;
+  padding-top: 14px;
 
   list-style: none;
+  border-top: 1px solid rgba(128, 128, 128, 0.119);
 }
 
 .popup__button {
@@ -353,8 +355,11 @@ img {
 .popup__close-button {
   position: absolute;
   top: 3%;
-  right: 3%;
+  right: 5%;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 30px;
   height: 30px;
 
